--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/FileList.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/FileList.html
@@ -10,7 +10,7 @@
 		<span data-dojo-attach-point="percentTextNode"
 			class="">0%</span>
 	</span>
-	<span data-dojo-attach-point="deleteNode"><a href="#">删除</a></span>
+	<span><a href="#" data-dojo-attach-point="deleteNode">删除</a></span>
 </div>
 <img alt="" src="" style="max-height: 200px; max-width: 200px" data-dojo-attach-point="imageNode">
 </div>
