提交一些琐碎的修改，这些修改是为了统一网站样式的，但是没有设计出合理的布局和 颜色主题，暂时搁浅。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/main.css
@@ -112,7 +112,7 @@ a:active {
 }
 
 #header {
-	background: #ededed;
+	background: #00a300;/*#ededed*/
 	position: fixed;
 	width: 100%;
 	top: 0;
@@ -140,7 +140,7 @@ a:active {
 }
 
 .top-logo a {
-	color: green;
+	color: white;
 	text-decoration: none;
 }
 
