--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/Header.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/Header.html
@@ -1,12 +1,18 @@
 <div id="header">
 	<div class="wrapper" style="display: block;">
 		<div class="top-logo">
-			<a href="/">孜孜不倦</a>
+			<a href="/" title="去首页">孜孜不倦</a>
 		</div>
 
 		<div class="top-nav">
 			<!-- 进入此页，用户必须已登录 -->
-			<div data-dojo-attach-point="userMenu"></div>
+			<div>
+				<a data-dojo-attach-point="userNode" href="#">
+					<img data-dojo-attach-point="userImageNode" width="20px" height="20px">
+					<span data-dojo-attach-point="userNameNode" style="">用户名</span>
+				</a>
+				<a style="margin-left:30px;" data-dojo-attach-point="logoutNode" href="#">退出</a>
+			</div>
 		</div>
 		
 		<div class="top-toolbar" data-dojo-attach-point="containerNode">
