--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/ActivityNode.html
@@ -1,25 +1,31 @@
 <div class="item">
 	<div>
-		<a href="#" data-dojo-attach-point="userInfo"></a>
-		<span data-dojo-attach-point="action"></span>
-		<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time">三分钟前</time></span>
-	</div>
-	<div>
-	<!-- TODO：放置用户头像 
-	<a href="#"><img src="a"/></a>
-	-->
-		
-		<div>
-			<div class="exercise" data-dojo-attach-point="exerciseNode">
-				
+		<div class="drip_face">
+			<!-- TODO：放置用户头像 -->
+			<a href="#"><img src="a" width="50px" height="50px"/></a>
+		</div>
+		<div class="drip_detail">
+			<div>
+				<a href="#" data-dojo-attach-point="userInfo"></a>
+				<span data-dojo-attach-point="action"></span>
+				<span class="time" style="margin-left: 20px;"><time title="" data-dojo-attach-point="time">三分钟前</time></span>
 			</div>
-			<div style="float: right">
-				<a href="#">关注(100)</a>
-				<i style="margin-left:6px;margin-right:8px; color:#AEAEAE">|</i>
-				<a href="#">收藏(100)</a>
-				<i style="margin-left:6px;margin-right:8px; color:#AEAEAE">|</i>
-				<!-- 解答是一个按钮，数字用一个框括住 -->
-				<a href="#" data-dojo-attach-point="btnAnswer">解答(100)</a>
+			<div>
+				<div>
+					<div class="exercise" data-dojo-attach-point="exerciseNode">
+						
+					</div>
+					<div style="float: right">
+					<!-- 
+						<a href="#">关注(100)</a>
+						<i style="margin-left:6px;margin-right:8px; color:#AEAEAE">|</i>
+						<a href="#">收藏(100)</a>
+						<i style="margin-left:6px;margin-right:8px; color:#AEAEAE">|</i>
+					 -->
+						<!-- 解答是一个按钮，数字用一个框括住 -->
+						<a href="#" data-dojo-attach-point="btnAnswer">解答(100)</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
