使用input来显示退出操作。
如果使用超链接的话，右键会弹出下拉框，这个时候选择“在新选项卡中打开”时，
会弹出一个新页面，并没有执行注销操作。
约定，凡是操作都使用input，不允许执行“在新选项卡中打开”

--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -146,6 +146,12 @@ a{
 	margin-top: 7px;
 }
 
+.drip_header_logged_in .logout{
+	margin: 10px 5px 10px;
+	padding: 0px 2px 0px 2px;
+	cursor: pointer;
+}
+
 
 /* 站点介绍版块 */
 .drip_site{
