--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -37,6 +37,11 @@ a{
 	text-decoration: none;
 }
 
+input[type="button"]{
+	cursor: pointer;
+	padding: 1px 2px 1px 2px;
+}
+
 .drip_version{
 	float: left;
 	font-size: 12px;
@@ -104,7 +109,6 @@ a{
 	color: #00a300;
 	letter-spacing: 4px;
 	float: left;
-	font-family:STKaiti,BiauKai;
 }
 
 .drip_header_logged_in .drip_header_logo{
@@ -151,7 +155,6 @@ a{
 .drip_header_logged_in .logout{
 	margin: 10px 5px 10px;
 	padding: 0px 2px 0px 2px;
-	cursor: pointer;
 }
 
 
@@ -354,4 +357,56 @@ a{
 	border-right: 1px solid #DDD;
 	border-top-right-radius:5px;
 	min-height: 500px;
+}
+
+.drip_answer_count {
+	border: 1px solid #D4D4D4;
+	font-size: 11px;
+	font-weight: bold;
+	padding: 6px 7px 5px;
+	line-height: 20px;
+	margin-left: 8px;
+	border-radius: 3px;
+	color: #333;
+	background-color: #FAFAFA;
+	position: relative;
+}
+
+/*暂定所有通往某个操作的操作，命名时加上to*/
+.drip_to_answer{
+	
+}
+
+.drip_answer_count::before {
+	content: "";
+	display: block;
+	width: 0;
+	height: 0;
+	border: 6px solid #D4D4D4;
+	border-color: transparent #D4D4D4 transparent transparent;
+	position: absolute;
+	right: 100%;
+	margin-right: 0;
+	top: 50%;
+	margin-top: -6px;
+}
+
+.drip_answer_count::after {
+	content: "";
+	display: block;
+	width: 0;
+	height: 0;
+	border: 6px solid #FAFAFA;
+	border-color: transparent #FAFAFA transparent transparent;
+	position: absolute;
+	right: 100%;
+	margin-right: -1px;
+	top: 50%;
+	margin-top: -6px;
+}
+
+/*取消操作*/
+.drip_op_cancel{
+	margin-right: 10px;
+	line-height: 1.4;
 }
