--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -11,7 +11,6 @@ body{
 	color: #333;
 	background-color:white;
 	clear: both;
-	overflow:hidden;
 	cursor:default;
 	line-height: 1.4;
 	font-family: Helvetica, arial, freesans, clean, sans-serif;
@@ -51,6 +50,11 @@ input[type="button"]{
 
 #wrapper{
 	min-height: 100%;
+	min-height: 100%;
+height: auto !important;
+height: 100%;
+margin: 0;
+margin-bottom: -268px;
 }
 
 /*
@@ -409,4 +413,39 @@ input[type="button"]{
 .drip_op_cancel{
 	margin-right: 10px;
 	line-height: 1.4;
+}
+
+.site_introduces {
+	margin-bottom: 30px;
+	overflow: hidden;
+	text-align: center;
+}
+
+.site_introduces .site_introduce {
+	float: left;
+	width: 290px;
+}
+
+.site_introduces .site_introduce_illustration {
+	margin-bottom: 10px;
+}
+
+.site_introduces h3 {
+	margin: 0 0 9px;
+	font-size: 24px;
+	font-weight: normal;
+	line-height: 1.1;
+	color: #2A2A2A;
+}
+
+.site_introduces p {
+	margin: 0 0 10px;
+	font-size: 15px;
+	color: #5A5A5A;
+	text-align: left;
+	/*text-indent: 2em;*/
+}
+
+.site_introduces h3, .site_introduces p {
+	padding-right: 10px;
 }
