--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -108,19 +108,21 @@ margin-bottom: -268px;
 }
 
 .drip_header_logged_out .drip_header_logo{
-	font-size: 35px;
-	font-weight:bold;
-	color: #00a300;
-	letter-spacing: 4px;
+	position:relative;
 	float: left;
 }
 
 .drip_header_logged_in .drip_header_logo{
-	font-size: 24px;
+	/*font-size: 24px;
 	font-weight:bold;
 	color: #00a300;
 	letter-spacing: 4px;
 	float:left;
+	padding-top: 8px;
+	*/
+	position:relative;
+	float: left;
+	padding-bottom: 6px;
 	padding-top: 8px;
 }
 
