--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -467,3 +467,14 @@ margin-bottom: -268px;
 	display: inline-block;
 	line-height: normal;
 }
+
+.minicard_footer {
+	height: 35px;
+	overflow: hidden;
+	background-color: #E6E9EE;
+	box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
+}
+
+.minicard_footer .actions{
+	float: right;
+}
