--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -1,7 +1,7 @@
 /*暂时放置首页样式，但是每个class标注清楚，要通用*/
 @CHARSET "UTF-8";
 
-html, body, div, a, ul, li{
+html, body, div, a, ul, li,dt,dd,dl{
 	border: 0px;
 	padding: 0px;
 	margin: 0px;
@@ -23,6 +23,10 @@ a, div{
 ul{
 	padding: 0px;
 	/*margin: 0px;*/
+}
+
+li{
+	list-style: none;
 }
 
 h1{
@@ -468,13 +472,54 @@ margin-bottom: -268px;
 	line-height: normal;
 }
 
+.minicard{
+	
+}
+
 .minicard_footer {
-	height: 35px;
 	overflow: hidden;
-	background-color: #E6E9EE;
-	box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
+	
 }
 
 .minicard_footer .actions{
 	float: right;
+}
+
+.minicard_body dt{
+	float: left;
+	display: inline;
+}
+
+.minicard_body dd{
+	float: left;
+	display: inline;
+	margin-left: 10px;
+}
+
+.minicard_body dd p{
+	width: 260px;
+	word-wrap: break-word;
+	margin: 0px;
+	padding: 0px;
+}
+
+.minicard_name img{
+	height: 50px;
+	border:0px;
+	border-radius: 2px;
+	display: block;
+}
+
+.userData{
+	width: 270px;
+}
+
+.userData li{
+	float:left;
+}
+
+.minicard_body .intro{
+	margin: 0 20px 8px;
+	line-height: 18px;
+	width: 330px;
 }
