--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/MiniCard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/MiniCard.html
@@ -1,14 +1,39 @@
 <div>
 	<div class="minicard">
-		<div class="minicard_body">
-			头像
-			用户介绍
-			用户所在城市
-			关注人数，被关注人数，答题数等
+		<div class="minicard_body clearfix">
+			<dl class="clearfix">
+				<dt class="minicard_name">
+					<a href="#" target="_blank">
+						<img alt="" src="#">
+					</a>
+				</dt>
+				<dd>
+					<p>
+						<a href="#" target="_blank">用户名</a>
+					</p>
+					<p>
+						性别 地址
+					</p>
+					
+					<div>
+						<ul class="userData clearfix">
+							<li>关注<a href="#">0</a></li>
+							<li>|</li>
+							<li>粉丝<a href="#">0</a></li>
+							<li>|</li>
+							<li>答题<a href="#">0</a></li>
+						</ul>
+					</div>
+				</dd>
+			</dl>
+			<dl class="intro">
+				<dt></dt>
+				<dd>自我介绍</dd>
+			</dl>
 		</div>
 		<div class="minicard_footer">
 			<div class="ft_left">
-				<!-- 记录用户来自哪里 -->
+				来自人人
 			</div>
 			<div class="ft_right">
 				<!-- 关注按钮 -->
