--- a/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/resources/index.css
@@ -45,6 +45,10 @@ input[type="button"]{
 	padding: 1px 2px 1px 2px;
 }
 
+img{
+	border: none;
+}
+
 .drip_version{
 	float: left;
 	font-size: 12px;
