--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/MiniCard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/MiniCard.html
@@ -14,6 +14,7 @@
 					<p>
 						<span data-dojo-attach-point="userSexNode">性别</span>
 						<span data-dojo-attach-point="userAddrNode">地址</span>
+						<!-- TODO：显示学校信息 -->
 					</p>
 					
 					<div>
@@ -32,7 +33,7 @@
 				<dd data-dojo-attach-point="introNode">自我介绍</dd>
 			</dl>
 		</div>
-		<div class="minicard_footer">
+		<div class="minicard_footer dijitDialogPaneActionBar">
 			<div class="ft_left" data-dojo-attach-point="fromSiteNode">
 			</div>
 			<div class="ft_right" data-dojo-attach-point="actionsNode">
