--- a/client/bundles/com.zizibujuan.drip.client.core/web/templates/ExerciseNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/templates/ExerciseNode.html
@@ -1,13 +1,11 @@
-<div
-	style="padding: 3px; margin-bottom: 10px; border-radius: 3px; background: #eee">
+<div style="margin-bottom: 20px;">
 	<!-- TODO：将这些style提取到样式文件中 -->
 	<div
-		style="border: 1px solid #cacaca; background: #fbfbfb; padding-left: 10px; padding-right: 10px">
+		style="border-bottom: 1px solid #cacaca;padding-bottom:10px; background: #fbfbfb;">
 		<div style="padding-top: 5px; padding-bottom: 10px" data-dojo-attach-point="divContent"></div>
 		<div style="margin-top: 5px">
 			<div style="text-align: right">
-				<div data-dojo-type="dijit/form/Button"
-					data-dojo-attach-point="buttonAnswer"></div>
+				<!-- <input type="button" data-dojo-attach-point="buttonAnswer"></input> -->
 			</div>
 		</div>
 	</div>
