--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/Login.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/Login.html
@@ -10,6 +10,7 @@
 		data-dojo-props="'placeholder':'邮箱/手机号/用户名',
 		'required':true,
 		'name':'login',
+		'value':'c@c.com',
 		'missingMessage':'请输入登录名'"></div>
 		<div data-dojo-type="dijit/form/ValidationTextBox"
 		data-dojo-attach-point="txtPwdNode"
@@ -18,6 +19,7 @@
 		'placeholder':'密码',
 		'required':true, 
 		'name':'password',
+		'value':'123qaz',
 		'missingMessage':'请输入密码'"></div>
 		<div style="padding-top: 3px; padding-bottom: 3px">
 			<div data-dojo-type="dijit/form/CheckBox" id="rememberMe"></div><label for="rememberMe">下次自动登录</label>
