修改关系中心tab的样式，去掉右边的边框线。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -537,3 +537,8 @@ margin-left: 25px;
 	line-height: 18px;
 	width: 330px;
 }
+
+.drip_member_list{
+	border-top:1px solid #DDD;
+	min-height: 500px;
+}
