完成关注和粉丝页面，并初步测试了关注和取消关注操作
因为这一次写代码，改动的东西太多，走的太远，所以先做一次提交。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -542,3 +542,21 @@ margin-left: 25px;
 	border-top:1px solid #DDD;
 	min-height: 500px;
 }
+
+.members .user-following{
+	float: right;
+}
+
+.members li {
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: bold;
+}
+
+.members li .avatar {
+	border: 1px solid #ddd;
+	padding: 1px;
+	background-color: #fff;
+	float: left;
+	margin-right: 10px;
+}
