--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/MemberNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/MemberNode.html
@@ -1,5 +1,5 @@
 <li>
-	<a data-dojo-attach-point="userImgLinkNode"><img data-dojo-attach-point="userImgNode"/></a>
+	<a data-dojo-attach-point="userImgLinkNode"><img class="avatar" width="20px" height="20px" data-dojo-attach-point="userImgNode"/></a>
 	<span><a  data-dojo-attach-point="userNickNameLinkNode">昵称</a><em data-dojo-attach-point="userRealNameNode">(姓名)</em></span>
-	<span><input type="button" data-dojo-attach-point="actionNode"/></span>
+	<span class="user-following"><input type="button" data-dojo-attach-point="actionNode"/></span>
 </li>
