只有登录用户查看自己的关系时，才修改tab上的关注个数

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -551,6 +551,8 @@ margin-left: 25px;
 	font-size: 14px;
 	line-height: 24px;
 	font-weight: bold;
+	padding: 5px 0px;
+	border-bottom: 1px solid #ddd;
 }
 
 .members li .avatar {
