--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/profile.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/profile.css
@@ -2,3 +2,97 @@
 * 个人主页的专有样式
 */
 
+
+.profile_side{
+	width: 220px;	
+}
+
+.activity_side{
+	width: 680px;
+}
+
+.drip_avatar{
+	
+}
+
+.drip_avatar img{
+	padding: 5px;
+	background: #fff;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+	width: 200px;
+	height: 200px;
+	border: 1px solid #ddd;
+}
+
+.drip_avatar h1{
+	font-size: 26px;
+	letter-spacing: -1px;
+	color: #495961;
+	margin-top: 6px;
+}
+
+.drip_avatar h1 span{
+	line-height: 1;
+	display: inline-block;
+	width: 100%;
+	line-height: 26px;
+	text-overflow: ellipsis;
+	overflow-x: hidden;
+	padding-bottom: 4px;
+	margin-bottom: -12px;
+}
+
+/*以下样式 可能通用*/
+/*用户统计样式*/
+.drip_user_stats{
+	border-bottom: 0px solid #ddd;
+	margin: 0 0 17px 0;
+	padding: 6px 0 15px 0;
+}
+
+.drip_user_stats li{
+	display: inline-block;
+	list-style-type: none;
+	min-width: 80px;
+}
+
+.drip_user_stats li strong{
+	display: block;
+	font-size: 28px;
+	line-height: 1;
+	font-weight: bold;
+	color: #222;
+}
+
+.drip_user_stats li span{
+	display: block;
+	margin-top: -2px;
+	font-size: 11px;
+	color: #999;
+}
+
+.drip_user_details{
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	margin: 0 0 8px 0;
+	padding: 18px 0 15px 0;
+	-webkit-font-smoothing: antialiased;
+}
+
+.drip_user_details  div{
+	margin: 5px 0 0 0;
+	font-size: 14px;
+	-webkit-font-smoothing: antialiased;
+}
+
+.drip_user_details .male{
+	margin-right: 15px;
+}
+
+.drip_join_date{
+	
+}
+
+.drip_join_label{
+	color: #808080;
+}
