--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -239,8 +239,13 @@ margin-bottom: -268px;
 
 .drip_user_links a {
 	display: block;
-	padding: 12px 5px 10px;
 	color: #333;
+	
+}
+
+.drip_user_links .drip_name{
+	margin: 12px 5px 10px;
+	padding: 0 10px;
 	line-height: 16px;
 }
 
@@ -255,8 +260,53 @@ margin-bottom: -268px;
 	white-space: nowrap;
 }
 
-.drip_user_links .drip_new_exercise{
+/*统一定义页面上按钮的样式*/
+.button, .minibutton{
+	position: relative;
+	display: inline-block;
+	padding: 7px 15px;
+	font-size: 13px;
 	font-weight: bold;
+	color: #333;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.9);
+	white-space: nowrap;
+	background-color: #eaeaea;
+	background-image: -moz-linear-gradient(#fafafa, #eaeaea);
+	background-image: -webkit-linear-gradient(#fafafa, #eaeaea);
+	background-image: linear-gradient(#fafafa, #eaeaea);
+	background-repeat: repeat-x;
+	border-radius: 3px;
+	border: 1px solid #ddd;
+	border-bottom-color: #c5c5c5;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-appearance: none;
+}
+
+.minibutton{
+	line-height: 24px;
+	box-shadow: none;
+	
+	margin: 8px 5px 8px;
+	padding: 0 10px;
+}
+
+.button.primary, .minibutton.primary {
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+	background-color: #60b044;
+	background-image: -moz-linear-gradient(#8add6d, #60b044);
+	background-image: -webkit-linear-gradient(#8add6d, #60b044);
+	background-image: linear-gradient(#8add6d, #60b044);
+	background-repeat: repeat-x;
+	border-color: #5ca941;
 }
 
 /* 个人首页样式 */
@@ -272,7 +322,6 @@ margin-bottom: -268px;
 .drip_main{
 	background-color: #fafafa;
 }
-
 
 
 .drip_main_center{
