调整new.html页面的js和样式，还没有完全做完。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
@@ -2,3 +2,7 @@
 @import url('../../drip/resources/index.css');
 @import url('../../drip/resources/UploaderFileList.css');
 @import url('../../mathEditor/resources/editor.css');
+
+@import url("../../dijit/themes/dijit.css");
+@import url('../../dijit/themes/claro/form/Common.css');
+@import url('../../dijit/themes/claro/form/Button.css');
