--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -61,10 +61,10 @@ img{
 #wrapper{
 	min-height: 100%;
 	min-height: 100%;
-height: auto !important;
-height: 100%;
-margin: 0;
-margin-bottom: -268px;
+	height: auto !important;
+	height: 100%;
+	margin: 0;
+	margin-bottom: -268px;
 }
 
 /*
@@ -304,6 +304,7 @@ margin-bottom: -268px;
 	padding: 0 10px;
 }
 
+
 .button.primary, .minibutton.primary {
 	color: #fff;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
@@ -313,6 +314,15 @@ margin-bottom: -268px;
 	background-image: linear-gradient(#8add6d, #60b044);
 	background-repeat: repeat-x;
 	border-color: #5ca941;
+}
+
+.minibutton.selected{
+	color: #fff;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.5);
+	background-color: #767676;
+	background-image: none;
+	border-color: #686868;
+	box-shadow: inset 0 3px 5px rgba(0,0,0,0.15);
 }
 
 /* 个人首页样式 */
@@ -622,4 +632,22 @@ margin-left: 25px;
 	background-color: #fff;
 	float: left;
 	margin-right: 10px;
+}
+
+
+.radio-group{
+	list-style:none;
+	margin:0px 0px 0px 0px;
+	padding: 0px;
+	float: left;
+}
+
+.radio-group li{
+	position: relative;
+	float: left;
+	margin-right: 10px;
+}
+
+.form{
+	margin-top: 15px;
 }
