将元素之间的间隔放大一些

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -648,6 +648,11 @@ margin-left: 25px;
 	margin-right: 10px;
 }
 
+.radio-group li label{
+	min-width:100px;
+	display: inline-block;
+}
+
 .form{
 	margin-top: 15px;
 }
