--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -74,7 +74,8 @@ ul.tabs li a .counter {
 
 .drip-title{
 	font-weight: bold;
-	font-size: 15x;
+	font-size: 13x;
+	margin-bottom: 6px;
 }
 
 .drip-exercise-option{
