调整个人首页样式。获取关注好友的信息改为使用digitalId进行获取

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/app.css
@@ -6,3 +6,4 @@
 @import url("../../dijit/themes/dijit.css");
 @import url('../../dijit/themes/claro/form/Common.css');
 @import url('../../dijit/themes/claro/form/Button.css');
+@import url('../../dijit/themes/claro/Dialog.css');
