添加google和baidu站长工具验证文件，重新build js

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/MiniCard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/MiniCard.html
@@ -19,11 +19,13 @@
 					
 					<div>
 						<ul class="userData clearfix">
-							<li>关注<a href="#" data-dojo-attach-point="followNode">0</a></li>
+							<li><a href="#" data-dojo-attach-point="followNode">关注 </a></li>
 							<li>|</li>
-							<li>粉丝<a href="#" data-dojo-attach-point="fanNode">0</a></li>
+							<li><a href="#" data-dojo-attach-point="fanNode">粉丝 </a></li>
 							<li>|</li>
-							<li>答题<a href="#" data-dojo-attach-point="answerNode">0</a></li>
+							<li><a href="#" data-dojo-attach-point="exerciseNode">录题 </a></li>
+							<li>|</li>
+							<li><a href="#" data-dojo-attach-point="answerNode">答题 </a></li>
 						</ul>
 					</div>
 				</dd>
