--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/templates/ActivityNode.html
@@ -25,7 +25,8 @@
 						<!-- 解答是一个按钮，数字用一个框括住。点击按钮后，隐藏；点击取消之后，再显示 -->
 						<span data-dojo-attach-point="answerAreaNode">
 							<!-- 解答 -->
-							<input type="button" value="解答" class="drip_to_answer" data-dojo-attach-point="btnAnswer"></input>
+							<button data-dojo-attach-point="btnAnswer"
+							 class="minibutton"><i class="icon-comment-alt"></i> 解答</button>
 							<a href="#" class="drip_answer_count">0</a>
 						</span>
 					</div>
