修改没有将公式编辑器中的model字符串转换为html的bug

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -601,6 +601,10 @@ margin-left: 25px;
 	float:left;
 }
 
+.userData a{
+	color: #4183C4;
+}
+
 .minicard_body .intro{
 	margin: 0 20px 8px;
 	line-height: 18px;
