修改this上下文引用错误的bug，修改模块路径拼写错误的bug

--- a/client/bundles/com.zizibujuan.drip.client.doc/web/doc/templates/ProjectForm.html
+++ b/client/bundles/com.zizibujuan.drip.client.doc/web/doc/templates/ProjectForm.html
@@ -14,5 +14,10 @@
 	<div data-dojo-type="dijit/form/SimpleTextarea"
 		data-dojo-attach-point = "peojectDesc"
 		data-dojo-props="rows:2,cols:50"></div>
+		
+	<div>
+		<button data-dojo-attach-point="submitProject" 
+			class="minibutton primary">创建</button>	
+	</div>
 
 </div>
