--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -93,7 +93,15 @@ h3{
 	margin-top: 0px;
 }
 
-
+h3 {
+display: block;
+font-size: 1.17em;
+-webkit-margin-before: 1em;
+-webkit-margin-after: 1em;
+-webkit-margin-start: 0px;
+-webkit-margin-end: 0px;
+font-weight: bold;
+}
 
 #header {
 	background: #00a300;/*#ededed*/
@@ -246,4 +254,67 @@ h3{
 	
 }
 
+.box {
+	margin-bottom: 20px;
+}
 
+.box-small .box-header {
+	min-height: 36px;
+}
+
+.box-header {
+	min-height: 40px;
+	line-height: 1;
+	background-color: #eaeaea;
+	background-image: -moz-linear-gradient(#fafafa, #eaeaea);
+	background-image: -webkit-linear-gradient(#fafafa, #eaeaea);
+	background-image: linear-gradient(#fafafa, #eaeaea);
+	background-repeat: repeat-x;
+	border: 1px solid #d5d5d5;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+.box-title {
+float: left;
+margin: 9px 10px;
+font-size: 14px;
+line-height: 1.429;
+color: #555;
+}
+
+.box-small .box-title {
+margin-top: 6px;
+margin-bottom: 6px;
+}
+
+.box-header, .box-body {
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.box-header:before, .box-header:after {
+content: " ";
+display: table;
+}
+
+.box-header:after {
+clear: both;
+}
+
+.box-header:before, .box-header:after {
+content: " ";
+display: table;
+}
+
+.box-body {
+background-color: #fff;
+border: solid #d5d5d5;
+border-width: 0 1px 1px;
+border-bottom-left-radius: 4px;
+border-bottom-right-radius: 4px;
+}
+
+.project-list {
+list-style: none;
+}
