--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/main.css
@@ -1,5 +1,3 @@
-@CHARSET "UTF-8";
-
 ul{
 	padding: 0px;
 }
@@ -299,24 +297,24 @@ display: table;
 }
 
 .box-header:after {
-clear: both;
+	clear: both;
 }
 
 .box-header:before, .box-header:after {
-content: " ";
-display: table;
+	content: " ";
+	display: table;
 }
 
 .box-body {
-background-color: #fff;
-border: solid #d5d5d5;
-border-width: 0 1px 1px;
-border-bottom-left-radius: 4px;
-border-bottom-right-radius: 4px;
+	background-color: #fff;
+	border: solid #d5d5d5;
+	border-width: 0 1px 1px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
 }
 
 .project-list {
-list-style: none;
+	list-style: none;
 }
 
 .box-header .new-project {
@@ -324,3 +322,4 @@ list-style: none;
 	margin-top: 4px;
 	margin-right: 4px;
 	font-size: 11px;
+}
