完成客户端登录部件的编写

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
@@ -2,13 +2,13 @@
 	<div>
 		<form data-dojo-attach-point="signupForm">
 			<div>
-				<input data-dojo-attach-point="email" name="email" type="text" placeholder="邮箱">
+				<input data-dojo-attach-point="email" name="email" type="text" placeholder="邮箱" maxlength="50">
 			</div>
 			<div>
-				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码">
+				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
 			</div>
 			<div>
-				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="用户名">
+				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="用户名" maxlength="20">
 			</div>
 		</form>
 	</div>
