--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
@@ -1,14 +1,14 @@
 <div>
 	<div>
 		<form data-dojo-attach-point="loginForm">
-			<div>
-				<input data-dojo-attach-point="login" name="login" type="text" placeholder="请输入邮箱或用户名" maxlength="50">
+			<div class="form_row">
+				<input data-dojo-attach-point="login" name="login" type="text" placeholder="邮箱或用户名" maxlength="50">
 			</div>
-			<div>
-				<input data-dojo-attach-point="password" name="password" type="password" placeholder="请输入密码" maxlength="20">
+			<div class="form_row">
+				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
 			</div>
 		</form>
 	</div>
-	<ul data-dojo-attach-point="errorContainer"></ul>
-	<button data-dojo-attach-point="btnLogin">登录</button>
+	<ul data-dojo-attach-point="errorContainer" class="signup_form_errors"></ul>
+	<button class="signup_form_submit" data-dojo-attach-point="btnLogin">登录</button>
 </div>
