--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
@@ -1,17 +1,17 @@
 <div>
 	<div>
 		<form data-dojo-attach-point="signupForm">
-			<div>
-				<input data-dojo-attach-point="email" name="email" type="text" placeholder="邮箱" maxlength="50">
+			<div class="form_row">
+				<input data-dojo-attach-point="email" name="email" type="email" placeholder="邮箱" maxlength="50">
 			</div>
-			<div>
+			<div class="form_row">
 				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
 			</div>
-			<div>
+			<div class="form_row">
 				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="用户名" maxlength="20">
 			</div>
 		</form>
 	</div>
-	<ul data-dojo-attach-point="errorContainer"></ul>
-	<button data-dojo-attach-point="btnSignup">注册</button>
+	<ul data-dojo-attach-point="errorContainer" class="signup_form_errors"></ul>
+	<button class="signup_form_submit" data-dojo-attach-point="btnSignup">注册</button>
 </div>
