--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -719,7 +719,7 @@ margin-left: 25px;
 	white-space: nowrap;
 	color: #111;
 	text-align: center;
-	text-shadow: 0 2px 2px rgba(0,0,0,0.8);
+	/*text-shadow: 0 2px 2px rgba(0,0,0,0.8);*/
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 	
