为登录框和注册框加上图标，便于用户在ie上快速识别每个输入框的作用。 在ie上placeholder在输入框获取焦点时不显示，所以需要加入图标。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Login.html
@@ -2,9 +2,11 @@
 	<div>
 		<form data-dojo-attach-point="loginForm">
 			<div class="form_row">
+				<span class="add-on"><i class="icon-envelope"></i></span>
 				<input data-dojo-attach-point="login" name="login" type="text" placeholder="邮箱或用户名" maxlength="50">
 			</div>
 			<div class="form_row">
+			 	<span class="add-on"><i class="icon-key"></i></span>
 				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
 			</div>
 		</form>
