--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/templates/Register.html
@@ -2,12 +2,15 @@
 	<div>
 		<form data-dojo-attach-point="signupForm">
 			<div class="form_row">
+				<span class="add-on"><i class="icon-envelope"></i></span>
 				<input data-dojo-attach-point="email" name="email" type="email" placeholder="邮箱" maxlength="50">
 			</div>
 			<div class="form_row">
+				<span class="add-on"><i class="icon-key"></i></span>
 				<input data-dojo-attach-point="password" name="password" type="password" placeholder="密码" maxlength="20">
 			</div>
 			<div class="form_row">
+				<span class="add-on"><i class="icon-user"></i></span>
 				<input data-dojo-attach-point="loginName" name="loginName" type="text" placeholder="用户名" maxlength="20">
 			</div>
 		</form>
