#86 解决xhr.get从缓存中获取ajax请求的问题，因为url完全一样。 将之前添加的修改日志页面提交上来，虽然还没有完全写完。

--- a/client/bundles/com.zizibujuan.drip.client.doc/web/doc/resources/typo.css
+++ b/client/bundles/com.zizibujuan.drip.client.doc/web/doc/resources/typo.css
@@ -164,10 +164,11 @@ pre, code {
     white-space: pre-wrap;
     word-wrap: break-word;
 }
-pre {
+
+code {
     background: #f8f8f8;
     border:1px solid #ddd;
-    padding: 1em 1.5em;
+    border-radius: 3px;
 }
 
 /* 一致化 horizonal rule */
