--- a/client/bundles/com.zizibujuan.drip.client.release/release/doc/templates/FileDetail.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/doc/templates/FileDetail.html
@@ -6,6 +6,9 @@
 			<span data-dojo-attach-point="lineCount"></span>
 			<span data-dojo-attach-point="size"></span>
 		</div>
+		<div>
+			<a data-dojo-attach-point="btnEdit">编辑</a>
+		</div>
 	</div>
 	<div class="blob" data-dojo-attach-point="blob"></div>
 </div>
