--- a/client/bundles/com.zizibujuan.drip.client.release/release/doc/templates/FileForm.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/doc/templates/FileForm.html
@@ -1,5 +1,5 @@
 <div>
-	<h1>新建页面</h1>
+	<h1 data-dojo-attach-point = "action_title"></h1>
 	<div>
 		<div class="breadcrumb">
 		<!-- 在这里根据路径生成 a/b 样式的结构 -->
@@ -38,7 +38,7 @@
 			<div>
 			<!-- 跳转到项目列表页面 -->
 				<a href="#" class="minibutton">取消</a>
-				<button data-dojo-attach-point="submitFile" type="submit" class="minibutton primary">提交新文件</button>	
+				<button data-dojo-attach-point="submitFile" type="submit" class="minibutton primary">保存</button>	
 			</div>
 		</div>
 		
