--- a/client/bundles/com.zizibujuan.drip.client.doc/web/doc/templates/ProjectDetail.html
+++ b/client/bundles/com.zizibujuan.drip.client.doc/web/doc/templates/ProjectDetail.html
@@ -1,5 +1,6 @@
 <li>
 	<h3><a data-dojo-attach-point="projectName"></a></h3>
+	<span data-dojo-attach-point="label"></span>
 	<div>
 		<p data-dojo-attach-point="desc"></p>
 	</div>
