--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -88,7 +88,7 @@ img{
 .divider-vertical {
 	float: left;
 	width: 1px;
-	height: 40px;
+	height: 42px;
 	margin: 0 10px;
 	background-color: #E5E5E5;
 	border-right: 1px solid white;
@@ -117,6 +117,7 @@ img{
 	background-image: linear-gradient(#F9F9F9, #F3F3F3);
 	background-repeat: repeat-x;
 	z-index: 1000;
+	height:42px;
 }
 
 .drip_header_logged_out .drip_header_logo{
@@ -176,6 +177,30 @@ img{
 .drip_header_logged_in .logout{
 	margin: 10px 5px 10px;
 	padding: 0px 2px 0px 2px;
+}
+
+
+.pageHeader{
+	position: relative;
+	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #eee;
+}
+
+
+.pageHeader ul.pageHeader-actions {
+	margin: 0;
+	float: right;
+	z-index: 21;
+}
+
+.pageHeader-actions>li {
+	list-style-type: none;
+	font-size: 11px;
+	color: #333;
+	margin: 0 10px 0 0;
+	float: left;
 }
 
 
@@ -298,11 +323,9 @@ img{
 }
 
 .minibutton{
+	padding: 0 10px;
 	line-height: 24px;
 	box-shadow: none;
-	
-	margin: 8px 5px 8px;
-	padding: 0 10px;
 }
 
 
