--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -462,9 +462,9 @@ img{
 }
 
 .drip_activity_list{
-	border-top:1px solid #DDD;
-	border-right: 1px solid #DDD;
-	border-top-right-radius:5px;
+	/*border-top:1px solid #DDD;
+	border-right: 1px solid #DDD;*/
+	/*border-top-right-radius:5px;*/
 	min-height: 500px;
 }
 
