--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/resources/index.css
@@ -791,3 +791,7 @@ margin-left: 25px;
 	width: 620px;
 	font-size: 18px;
 }
+
+.icon_connect{
+	background-image: url("/drip/resources/images/icon_connect.png");
+}
