--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/widget/templates/HeaderLoggedIn.html
@@ -8,7 +8,7 @@
 	<div class="divider-vertical"></div>
 	<ul class="drip_top_nav">
 		<li><a href="/" class="current">首页</a></li>
-		<li><a href="/explore_projects">笔记</a></li>
+		<!-- <li><a href="/explore_projects">笔记</a></li> -->
 		<li><a href="/explore_exercises">题库</a></li>
 		<!-- <li><a href="/help">帮助</a></li> -->
 	</ul>
